--- a/foundry/foundry.toml
+++ b/foundry/foundry.toml
@@ -2,6 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+via_ir = true
+optimizer = true
+
 # solc_version = "0.8.24"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
